# sdk-sidewalk

scripts/ci/: fill_hardware_map.py
tests/unit_tests/pal_assert/: CMakeLists.txt
tests/unit_tests/pal_assert/src/: main.c
tests/unit_tests/pal_ble_adapter/src/: main.c
tests/unit_tests/pal_log/src/: main.c
tests/unit_tests/pal_mfg_storage/src/: main.c
tests/unit_tests/pal_timer/src/: main.c
tests/unit_tests/pal_uptime/src/: main.c
tests/unit_tests/sid_ble_adapter_callbacks/src/: main.c
tests/unit_tests/sid_ble_advert/src/: main.c
tests/unit_tests/sid_ble_connection/src/: main.c
tests/unit_tests/sid_ble_service/src/: main.c
tests/unit_tests/sid_pal_gpio/: prj.conf
tests/unit_tests/sid_pal_gpio/src/: main.c
